....I..PS. [ZBXNEXT-2359] made server and proxy refuse to start if StartPollersUnreachable=0, but other pollers are started (asaveljevs)
....I..PS. [ZBX-8557] implemented housekeeper 30 minutes startup delay (Arturs)
A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)

Bug fixes:
..F....... [ZBX-8682] added IT services sorting in dependencies tab (Oleg)
........S. [ZBX-8414] fixed value cache statistics update when database contains only part of requested data (wiper)
........S. [ZBX-8414] fixed value cache single value request returning FAIL for not found items in low memory mode (wiper)
..F....... [ZBX-8675] removed sortorder sorting from IT services popup window (Oleg)
...G...... [ZBX-8664] changed agent to allow empty return values from user parameters and remote commands (dimir)
..F....... [ZBX-8616] fixed link to host items in Inventory->Hosts host view (Krists)
..F....... [ZBX-8624] fixed inconsistent header layout in Monitoring->Discovery page (Krists)
..F....... [ZBX-8524] fixed trigger filter not being reset on the Monitoring->Events page (Krists, Pavels)
...G...PS. [ZBX-8494] added check to prevent starting a proxy with a server database and vice versa (Andris)
..F....... [ZBX-8670] fixed undefined index error on the web scenario configuration page when no host is selected (Pavels)
..F....... [ZBX-8531] fixed inconsistent group selection dropdown behaviour in application configuration (Krists)
..F....... [ZBX-8653] fixed big double value check in the decimal validator (Oleg)
..F....... [ZBX-8377] fixed style and hover effect for disabled bulk action buttons and improved readability for readonly input fields (Ivo)
A......... [ZBX-8568] fixed item.delete and itemprototype.delete to also remove trigger prototypes using them (Krists)
A......... [ZBX-8636] fixed user accounts not being disabled after exceeding number of unsuccessful login attempts (Krists)